# boids_sfml

./: CMakeLists.txt
include/: sim_config.hpp
src/: main.cpp
